--- a/backend/env.example
+++ b/backend/env.example
@@ -1,14 +1,18 @@
-# Google Maps API Keys
-GOOGLE_MAPS_API_KEY=AIzaSyBOwNDFwx9EerTB29GCdwyCyaaQIDgs9UI
+# Configuration du serveur
+PORT=3000
+NODE_ENV=development
 
-# Supabase Configuration
+# Configuration Supabase
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
-# Backend Configuration
-PORT=3000
-NODE_ENV=development
+# Configuration JWT
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRES_IN=7d
 
-# Database Configuration
-DATABASE_URL=your_database_url_here
+# Configuration Mapbox (optionnel)
+MAPBOX_ACCESS_TOKEN=your_mapbox_access_token_here
+
+# Configuration CORS
+CORS_ORIGIN=http://localhost:8081
