--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-system-ui": "~5.0.5",
     "expo-web-browser": "~14.1.5",
     "lucide-react-native": "^0.475.0",
+    "nativewind": "^4.1.23",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.1",
@@ -41,6 +42,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mapbox-gl": "^5.2.1-deprecated",
     "react-native-maps": "1.20.1",
+    "react-native-modalize": "^2.1.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.3.0",
     "react-native-screens": "~4.10.0",
@@ -48,6 +50,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
+    "tailwindcss": "^4.1.12",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
