🚀 Mise à jour complète du projet YATOU : Application livreur, optimisations, grille tarifaire et composants avancés

--- a/app.json
+++ b/app.json
@@ -36,7 +36,10 @@
     "web": {
       "bundler": "metro",
       "output": "single",
-      "favicon": "./assets/logos/Logo-yatou-01.png"
+      "favicon": "./assets/logos/Logo-yatou-01.png",
+      "config": {
+        "googleMapsApiKey": "AIzaSyBOwNDFwx9EerTB29GCdwyCyaaQIDgs9UI"
+      }
     },
     "plugins": [
       "expo-router", 
