--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
