--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
       }
     },
     "android": {
+      "package": "com.yohan.yatou",
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyBOwNDFwx9EerTB29GCdwyCyaaQIDgs9UI"
@@ -30,7 +31,9 @@
       },
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
       ]
     },
     "web": {
@@ -42,18 +45,35 @@
       }
     },
     "plugins": [
-      "expo-router", 
-      "expo-font", 
+      "expo-router",
+      "expo-font",
       "expo-web-browser",
+      "expo-dev-client",
       [
         "expo-location",
         {
           "locationAlwaysAndWhenInUsePermission": "Cette application utilise votre position pour vous localiser sur la carte et calculer les itinéraires de livraison."
         }
-      ]
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/logos/Logo-yatou-01.png",
+          "color": "#DC2626",
+          "defaultChannel": "default"
+        }
+      ],
+      "@react-native-firebase/app"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c154c066-2561-48be-bd88-bb131406475f"
+      }
+    },
+    "owner": "yohan0707"
   }
 }
