--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "yatou-delivery",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/logos/Logo-yatou-01.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "yatou",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,6 +13,13 @@
       "resizeMode": "contain",
       "backgroundColor": "#DC2626"
     },
+    "notification": {
+      "icon": "./assets/images/icon.png",
+      "color": "#DC2626",
+      "iosDisplayInForeground": true,
+      "androidMode": "default",
+      "androidCollapsedTitle": "YATOU - Nouvelle commande"
+    },
     "ios": {
       "supportsTablet": true,
       "config": {
@@ -20,7 +27,11 @@
       },
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "Cette application utilise votre position pour vous localiser sur la carte et calculer les itinéraires de livraison."
-      }
+      },
+      "entitlements": {
+        "aps-environment": "production"
+      },
+      "bundleIdentifier": "com.yohan.yatou"
     },
     "android": {
       "package": "com.yohan.yatou",
@@ -33,8 +44,12 @@
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION"
-      ]
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECEIVE_BOOT_COMPLETED",
+        "android.permission.VIBRATE"
+      ],
+      "googleServicesFile": "./google-services.json",
+      "useNextNotificationsApi": true
     },
     "web": {
       "bundler": "metro",
@@ -58,12 +73,12 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/logos/Logo-yatou-01.png",
+          "icon": "./assets/images/icon.png",
           "color": "#DC2626",
-          "defaultChannel": "default"
+          "defaultChannel": "default",
+          "sounds": ["./assets/notification.wav"]
         }
-      ],
-      "@react-native-firebase/app"
+      ]
     ],
     "experiments": {
       "typedRoutes": true
