--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
-    "expo-notifications": "^0.32.12",
     "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -61,6 +60,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-onesignal": "^5.0.1",
     "tailwindcss": "^4.1.12",
     "zustand": "^5.0.7"
   },
@@ -68,6 +68,7 @@
     "@babel/core": "^7.25.2",
     "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "~19.1.10",
+    "onesignal-expo-plugin": "^1.6.5",
     "typescript": "~5.9.2"
   }
 }
